--- a/app/student-list/student-list.template.html
+++ b/app/student-list/student-list.template.html
@@ -1,3 +1,14 @@
-<div ng-controller="StudentController">
-  <h1>{{name}}</h1>
+<div>
+  <!-- if you are binding some variable to the html you can either use $ctrl which represents the controller binded to the html using templateUrl or template in the component intialization -->
+  <h1>{{$ctrl.name}}</h1>
+  <!-- you can also give special alias to controllers in the component using controllerAs: nikson 
+    angular.module('myApp').component('studentList', {
+      templateUrl: "student-list/student-list.template.html",
+      controllerAs: "$nikson",
+      controller: function () {
+        this.name = "Nikson Shrestha"
+      }
+    });
+  which would've allowed you do to something like {{$nikson.name}} in the above html, by convention we append $ symbol to represent controller
+  -->
 </div>
