--- a/app/index.html
+++ b/app/index.html
@@ -1,34 +1,41 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html lang="en" ng-app="myApp" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!-->
 <html lang="en" ng-app="myApp" class="no-js">
-<!--<![endif]-->
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Student Dashboard</title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Student Dashboard</title>
-  <meta name="description" content="" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <!-- <link rel="stylesheet" href="lib/html5-boilerplate/dist/css/normalize.css" />
-  <link rel="stylesheet" href="lib/html5-boilerplate/dist/css/main.css" /> -->
-  <link rel="stylesheet" href="app.css" />
-  <link rel="stylesheet" href="navbar/navbar.css" />
-  <script src="https://kit.fontawesome.com/f93fb3145a.js" crossorigin="anonymous"></script>
-  <!-- <script src="lib/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script> -->
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
-  <script src="app.module.js"></script>
-  <script src="navbar/navbar.component.js"></script>
-  <script src="student-list/student-list.component.js"></script>
-</head>
+    <!-- Load AngularJS first -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
 
-<body>
-  <div>
-    <navbar></navbar>
-    <student-list></student-list>
-  </div>
-</body>
+    <!-- Load ui-grid scripts after AngularJS -->
+    <script src="lib/angular-ui-grid/ui-grid.js"></script>
 
+    <!-- Load other styles and scripts -->
+    <link rel="stylesheet" href="lib/angular-ui-grid/ui-grid.min.css" />
+    <!-- Add other stylesheet links as needed -->
+    <link rel="stylesheet" href="app.css" />
+    <link rel="stylesheet" href="navbar/navbar.css" />
+    <link rel="stylesheet" href="student-list/student-list.css" />
+    <script
+      src="https://kit.fontawesome.com/f93fb3145a.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <script src="app.module.js"></script>
+    <script src="navbar/navbar.component.js"></script>
+    <script src="student-list/student-list.component.js"></script>
+  </head>
+
+  <!-- Rest of your HTML code -->
+  <body>
+    <div class="container">
+      <navbar style="width: 100%"></navbar>
+      <div class="main">
+        <student-list></student-list>
+      </div>
+    </div>
+  </body>
 </html>
