--- a/app/index.html
+++ b/app/index.html
@@ -7,14 +7,11 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Load AngularJS first -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
-
-    <!-- Load ui-grid scripts after AngularJS -->
-    <script src="lib/angular-ui-grid/ui-grid.js"></script>
-
     <!-- Load other styles and scripts -->
-    <link rel="stylesheet" href="lib/angular-ui-grid/ui-grid.min.css" />
+    <link rel="styleSheet" href="lib/angular-ui-grid/ui-grid.min.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
+    <script src="lib/angular-ui-grid/ui-grid.min.js"></script>
+
     <!-- Add other stylesheet links as needed -->
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="navbar/navbar.css" />
