--- a/app/student-list/student-list.template.html
+++ b/app/student-list/student-list.template.html
@@ -1,4 +1,4 @@
-<div class="hero">
+<!-- <div class="hero">
   <h1>Student List</h1>
   <table style="width: 100%">
     <thead>
@@ -20,7 +20,7 @@
       </tr>
     </tbody>
   </table>
-</div>
+</div> -->
 
 <!-- <div ui-grid="data:$ctrl.students" class="uiGrid"></div> -->
-<!-- <div ui-grid="{ data: $ctrl.myData }" class="uiGrid"></div> -->
+<div ui-grid="$ctrl.gridOptions" class="uiGrid"></div>
