--- a/app/student-list/student-list.template.html
+++ b/app/student-list/student-list.template.html
@@ -11,7 +11,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr ng-repeat="student in $ctrl.students track by $index">
+      <tr ng-repeat="student in $ctrl.students">
         <th scope="row">{{$index + 1}}</th>
         <td>{{student.name}}</td>
         <td>{{student.age}}</td>
@@ -21,6 +21,7 @@
     </tbody>
   </table>
 </div> -->
-
-<!-- <div ui-grid="data:$ctrl.students" class="uiGrid"></div> -->
-<div ui-grid="$ctrl.gridOptions" class="uiGrid"></div>
+<div class="table">
+  <h2>Student List</h2>
+  <div ui-grid="{ data: $ctrl.myData }" class="myGrid"></div>
+</div>
