ui grid search functionality added

--- a/app/student-list/student-list.template.html
+++ b/app/student-list/student-list.template.html
@@ -1,4 +1,4 @@
 <div class="table">
   <h2>Student List</h2>
-  <div ui-grid="{ data: $ctrl.myData }" class="myGrid"></div>
+  <div ui-grid="$ctrl.gridOptions" class="myGrid"></div>
 </div>
