--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
     <link rel="styleSheet" href="lib/angular-ui-grid/ui-grid.min.css" />
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-ui-grid/ui-grid.min.js"></script>
+    <script src="lib/angular-ui-grid/ui-grid.core.min.js"></script>
 
     <script src="//unpkg.com/@uirouter/angularjs/release/angular-ui-router.min.js"></script>
 
