--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-ui-grid/ui-grid.min.js"></script>
     <script src="lib/angular-ui-grid/ui-grid.core.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js"></script>
 
     <script src="//unpkg.com/@uirouter/angularjs/release/angular-ui-router.min.js"></script>
 
