--- a/app/student-list/student-list.template.html
+++ b/app/student-list/student-list.template.html
@@ -1,4 +1,8 @@
 <div class="table">
+  <div style="width: 800px">
+    <canvas id="myChart" width="400" height="200"></canvas>
+  </div>
   <h2>Student List</h2>
+
   <div ui-grid="$ctrl.gridOptions" class="myGrid"></div>
 </div>
