--- a/app/student-list/student-list.template.html
+++ b/app/student-list/student-list.template.html
@@ -1,7 +1,8 @@
 <div class="table">
-  <div style="width: 800px">
-    <canvas id="myChart" width="400" height="200"></canvas>
+  <div class="chart">
+    <canvas width="700" height="500" id="genderChart"></canvas>
   </div>
+
   <h2>Student List</h2>
 
   <div ui-grid="$ctrl.gridOptions" class="myGrid"></div>
